# elementary-app-template

./: README.md  com.github.yourusername.yourrepositoryname.json  com.github.yourusername.yourrepositoryname.yml  io.github.yourusername.yourrepositoryname.json  io.github.{{USER_NAME}}.{{APP_NAME}}.json  meson.build  setup  {{APP_ID}}.json
.github/workflows/: ci.yml
data/: meson.build  my-app.metainfo.xml.in.in  {{APP_NAME}}-build.gresource.xml.in  {{APP_NAME}}.desktop.in.in  {{APP_NAME}}.metainfo.xml.in.in
lib/: Lib.vala  meson.build
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.yourusername.yourrepositoryname.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+164 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
src/: Application.vala  Config.vala.in  MainWindow.vala
tests/: TestConfig.vala.in  test.vala
